--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
+  padding: 0;
 }
 
 code {
