--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -1,8 +1,101 @@
-.header_wrapper {
+/* DESKTOP MENU */
+.header__desktop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+  height: 5rem;
+  box-shadow: 0px 5px 5px 2px #c7c7c733;
+
+  div {
     display: flex;
-    justify-content: space-between;
-    width: 100vw;
-    height: 68px;
-    background-color: lightgrey;
-    border-bottom: 1px solid gray;
+  }
+
+  ul {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding: 0;
+
+    li {
+      padding: 0 2rem;
+      cursor: pointer;
+    }
+  }
+}
+
+h1 {
+  letter-spacing: 1px;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+button {
+  background-color: rgb(247, 131, 23);
+  padding: 0.5rem 1rem;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+/* TABLET MENU */
+
+.header__tablet {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5rem;
+  padding: 0 1rem;
+  box-shadow: 0px 5px 5px 2px #c7c7c733;
+
+  .hamburger-react {
+    z-index: 1;
+  }
+}
+
+.header__side-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 35vw;
+  padding-top: 6rem;
+  box-shadow: 5px 0px 5px 2px #e9e9e98c;
+  background-color: white;
+  z-index: 0;
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0 0 0 1.6rem;
+    li {
+      padding: 1.5rem 0;
+      cursor: pointer;
+    }
+  }
+}
+
+.header__background {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 35vw;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.15);
+  z-index: 1;
+}
+
+.header__side-nav--hidden {
+  display: none;
+}
+
+/*MOBILE MENU*/
+@media only screen and (max-width: 600px) {
+  .header__side-nav {
+    width: 50vw;
+  }
+  .header__background {
+    left: 50vw;
+  }
 }
