--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -16,12 +16,23 @@
     align-items: center;
     list-style-type: none;
     padding: 0;
+    margin-left: 2rem;
 
     li {
       padding: 0 2rem;
       cursor: pointer;
+
+      a {
+        color: #3c3c3c;
+        text-decoration: none;
+      }
     }
   }
+}
+
+.active {
+  font-weight: 600;
+  border-bottom: 2px solid #3c3c3c;
 }
 
 h1 {
@@ -31,12 +42,12 @@ h1 {
 }
 
 button {
-  background-color: rgb(247, 131, 23);
   padding: 0.5rem 1rem;
-  color: white;
-  border: none;
   border-radius: 3px;
+  border: none;
   cursor: pointer;
+  color: white;
+  background-color: rgb(247, 131, 23);
 }
 
 /* TABLET MENU */
@@ -61,7 +72,6 @@ button {
   height: 100vh;
   width: 35vw;
   padding-top: 6rem;
-  box-shadow: 5px 0px 5px 2px #e9e9e98c;
   background-color: white;
   z-index: 0;
 
@@ -69,9 +79,15 @@ button {
     list-style-type: none;
     margin: 0;
     padding: 0 0 0 1.6rem;
+
     li {
       padding: 1.5rem 0;
       cursor: pointer;
+
+      a {
+        color: #3c3c3c;
+        text-decoration: none;
+      }
     }
   }
 }
