Added banner html code

--- a/src/components/Footer/Footer.styles.scss
+++ b/src/components/Footer/Footer.styles.scss
@@ -5,10 +5,10 @@ $footer_color: #333333;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  // position: absolute;
+  // bottom: 0;
+  // left: 0;
+  // right: 0;
   height: 80px;
   padding: 0 2rem;
   box-shadow: 5px 0px 5px 2px #c7c7c733;
