--- a/src/components/Banner/Banner.styles.scss
+++ b/src/components/Banner/Banner.styles.scss
@@ -1,4 +1,78 @@
-.banner {
-  display: flex;
-  height: 100vh;
+.banner__container {
+  height: calc(100vh - 5rem);
+  padding: 0 2rem;
+
+  .banner {
+    display: flex;
+    align-items: center;
+    height: 70%;
+
+    .banner__text {
+      width: 40%;
+
+      h4 {
+        font-weight: 400;
+      }
+    }
+
+    img {
+      width: 60%;
+    }
+  }
+
+  .banner__rectangles {
+    display: flex;
+    justify-content: space-between;
+
+    .banner__rectangle {
+      padding: 1rem;
+      width: 28%;
+      box-shadow: 2px 2px 5px 2px #c7c7c765;
+
+      h6 {
+        font-weight: 400;
+        margin: 0;
+      }
+    }
+  }
+}
+
+/* TABLET */
+@media only screen and (max-width: 768px) {
+  .banner__container {
+    .banner {
+      flex-wrap: wrap;
+
+      .banner__text {
+        width: 100%;
+        text-align: center;
+      }
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .banner__rectangles {
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+
+      .banner__rectangle {
+        width: 40%;
+        margin: 0.5rem;
+      }
+    }
+  }
+}
+
+/* MOBILE */
+@media only screen and (max-width: 575px) {
+  .banner__container {
+    .banner__rectangles {
+      .banner__rectangle {
+        width: 100%;
+      }
+    }
+  }
 }
