--- a/src/views/Banner/Banner.styles.scss
+++ b/src/views/Banner/Banner.styles.scss
@@ -25,11 +25,14 @@
     justify-content: space-between;
 
     .banner__rectangle {
-      padding: 1rem;
+      display: flex;
+      align-items: center;
+      padding: 0.6rem 1rem;
       width: 28%;
       box-shadow: 2px 2px 5px 2px #c7c7c765;
 
       h6 {
+        padding-left: 1rem;
         font-weight: 400;
         margin: 0;
       }
@@ -57,6 +60,7 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
+      margin-top: 1.5rem;
 
       .banner__rectangle {
         width: 40%;
