--- a/src/views/Banner/Banner.styles.scss
+++ b/src/views/Banner/Banner.styles.scss
@@ -43,6 +43,7 @@
 /* TABLET */
 @media only screen and (max-width: 768px) {
   .banner__container {
+    height: auto;
     .banner {
       flex-wrap: wrap;
 
