--- a/src/views/Faqs/Faqs.scss
+++ b/src/views/Faqs/Faqs.scss
@@ -7,6 +7,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2rem;
+    margin: 2rem 0 3rem 0;
   }
 }
