ADD: Expected tasks view.

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,6 @@
+$font-color_gray: #333333;
+
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
