--- a/src/views/About/About.scss
+++ b/src/views/About/About.scss
@@ -52,14 +52,15 @@
     flex-direction: column;
     text-align: center;
     height: auto;
+    padding: 3rem 1rem 1rem 1rem;
 
     .about__text {
-      padding-top: 3rem;
       width: 100%;
     }
 
     img {
       width: 100%;
+      padding-top: 2rem;
     }
   }
   .about__values-container {
