FIX: Min width on styling timeline

--- a/src/views/Explanation/Explanation.styles.scss
+++ b/src/views/Explanation/Explanation.styles.scss
@@ -4,6 +4,7 @@
   height: $view-height;
   background-color: $light-gray;
   padding: 54px 65px;
+  min-width: 275px;
 
   .explanation {
     height: 100%;
