FIX: Tasks title / Translations on timeline

--- a/src/views/Tasks/Tasks.styles.scss
+++ b/src/views/Tasks/Tasks.styles.scss
@@ -2,7 +2,8 @@
   padding: 10% 5%;
   &_title {
       margin-bottom: 38px;
-    h1 {
+      font-family: Helvetica Neue, Bold;
+    h2 {
       font-size: 1.5rem;
       margin: 5px 0;
     }
