--- a/src/views/Explanation/Explanation.styles.scss
+++ b/src/views/Explanation/Explanation.styles.scss
@@ -1,19 +1,16 @@
 @import "/src/index.scss";
 
 .explanation_wrapper {
-  height: $view-height;
-  max-height: 1140px;
-  min-height: calc(700px + 5vh);
+  height: calc($view-height + 55px);
   background-color: $light-gray;
-  overflow-y: hidden;
   padding: 8px 63px;
 
   .explanation {
     height: 100%;
-    max-height: calc($view-height - 21px);
-    min-height: 700px;
+    max-height: $view-height;
     background: $light-gray url("../../resources/explanation/line_desktop.svg")
       no-repeat center;
+    background-size: contain;
     position: relative;
 
     h1 {
@@ -21,7 +18,7 @@
     }
 
     .explanation_timeline {
-      margin-top: 5%;
+      margin-top: 25px;
 
       div {
         position: absolute;
@@ -38,7 +35,7 @@
       }
 
       &_step1 {
-        top: 10%;
+        top: 8%;
         left: 3%;
         font-size: 0.8rem;
         section {
@@ -87,12 +84,12 @@
       .explanation_timeline {
         &_step1 {
           top: 1%;
-          left: 63%;
+          left: 59%;
           font-size: 0.7rem;
         }
         &_step2 {
           top: 25%;
-          left: 63%;
+          left: 59%;
           font-size: 0.7rem;
         }
         &_step3 {
@@ -130,12 +127,12 @@
           font-size: 0.6rem;
         }
         &_step3 {
-          bottom: 27%;
-          left: 29%;
+          bottom: 33%;
+          left: 31%;
           font-size: 0.6rem;
         }
         &_step4 {
-          bottom: 1%;
+          bottom: 8%;
           left: 23%;
           font-size: 0.6rem;
         }
