FIX: Footer UI bug on FAQs page

--- a/src/components/Footer/Footer.styles.scss
+++ b/src/components/Footer/Footer.styles.scss
@@ -2,6 +2,7 @@ $footer_background: #ffffff;
 $footer_color: #333333;
 
 .footer {
+  position: static;
   display: flex;
   justify-content: space-between;
   align-items: center;
