--- a/src/views/Faqs/Faqs.scss
+++ b/src/views/Faqs/Faqs.scss
@@ -1,7 +1,7 @@
 .faqs__container {
-  margin-top: 3rem;
+  height: calc(100vh - 14rem);
   text-align: center;
-  padding: 0 2rem;
+  padding: 2rem;
 
   .faqs__rectangles {
     display: flex;
