--- a/src/views/Explanation/Explanation.styles.scss
+++ b/src/views/Explanation/Explanation.styles.scss
@@ -1,13 +1,14 @@
 @import "/src/index.scss";
 
 .explanation_wrapper {
-  height: $view-height;
-  background-color: $light-gray;
+  height: $height-full-view;
+  background-color: $color-light-gray;
   padding: 54px 65px;
 
   .explanation {
     height: 100%;
-    background: $light-gray url("../../resources/explanation/line_desktop.svg")
+    max-height: calc($height-view);
+    background: $color-light-gray url("../../resources/explanation/line_desktop.svg")
       no-repeat center;
     position: relative;
 
@@ -33,16 +34,16 @@
       }
 
       &_step1 {
-        top: 8vh;
-        left: 3vw;
+        top: 6%;
+        left: 3%;
         font-size: 0.8rem;
         section {
           max-width: 250px;
         }
       }
       &_step2 {
-        top: 24vh;
-        left: 28vw;
+        top: 24%;
+        left: 30%;
         font-size: 0.8rem;
 
         section {
@@ -50,8 +51,8 @@
         }
       }
       &_step3 {
-        bottom: 32vh;
-        left: 40vw;
+        bottom: 35%;
+        left: 46%;
         font-size: 0.8rem;
 
         section {
@@ -59,8 +60,8 @@
         }
       }
       &_step4 {
-        bottom: 10vh;
-        left: 58vw;
+        bottom: 10%;
+        left: 65%;
         font-size: 0.8rem;
         align-items: end;
 
@@ -76,28 +77,28 @@
   .explanation_wrapper {
     padding: 34px 25px;
     .explanation {
-      background: $light-gray url("../../resources/explanation/line_tablet.svg")
+      background: url("../../resources/explanation/line_tablet.svg")
         no-repeat center;
 
       .explanation_timeline {
         &_step1 {
-          top: 3vh;
-          left: 55vw;
+          top: 3%;
+          left: 60%;
           font-size: 0.7rem;
         }
         &_step2 {
-          top: 27vh;
-          left: 55vw;
+          top: 27%;
+          left: 60%;
           font-size: 0.7rem;
         }
         &_step3 {
-          bottom: 34vh;
-          left: 41vw;
+          bottom: 34%;
+          left: 43%;
           font-size: 0.7rem;
         }
         &_step4 {
-          bottom: 9vh;
-          left: 27vw;
+          bottom: 9%;
+          left: 26%;
           font-size: 0.7rem;
         }
       }
@@ -110,28 +111,27 @@
     padding: 24px 15px;
     .explanation {
       margin-top: 24px;
-      background: $light-gray url("../../resources/explanation/line_mobile.svg")
+      background: url("../../resources/explanation/line_mobile.svg")
         no-repeat center;
 
       .explanation_timeline {
         &_step1 {
-          top: 5vh;
-          left: 31vw;
+          left: 32%;
           font-size: 0.6rem;
         }
         &_step2 {
-          top: 27vh;
-          left: 36vw;
+          top: 25%;
+          left: 37%;
           font-size: 0.6rem;
         }
         &_step3 {
-          bottom: 28vh;
-          left: 29vw;
+          bottom: 29%;
+          left: 30%;
           font-size: 0.6rem;
         }
         &_step4 {
-          bottom: 3vh;
-          left: 23vw;
+          bottom: 4%;
+          left: 24%;
           font-size: 0.6rem;
         }
       }
@@ -139,7 +139,7 @@
   }
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 380px) {
   .explanation_wrapper {
     min-width: 275px;
     margin: 24px 0;
@@ -147,28 +147,65 @@
       margin: 0 24px;
     }
     .explanation {
-      background: $light-gray url("../../resources/explanation/line_mobile.svg")
+      background: url("../../resources/explanation/line_mobile.svg")
         no-repeat center;
 
       .explanation_timeline {
         &_step1 {
-          top: 5vh;
-          left: 26vw;
+          top: 0;
+          left: 28%;
           font-size: 0.6rem;
         }
         &_step2 {
-          top: 24vh;
-          left: 23vw;
+          top: 24%;
+          left: 30%;
           font-size: 0.6rem;
         }
         &_step3 {
-          bottom: 20vh;
-          left: 22vw;
+          bottom: 29%;
+          left: 22%;
           font-size: 0.6rem;
         }
         &_step4 {
-          bottom: 1vh;
-          left: 21vw;
+          bottom: 0;
+          left: 20%;
+          font-size: 0.6rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .explanation_wrapper {
+    min-width: 275px;
+    margin: 24px 0;
+    h1 {
+      margin: 0 24px;
+    }
+    .explanation {
+      background: url("../../resources/explanation/line_mobile.svg")
+        no-repeat center;
+
+      .explanation_timeline {
+        &_step1 {
+          top: 0;
+          left: 24%;
+          font-size: 0.6rem;
+        }
+        &_step2 {
+          top: 24%;
+          left: 23%;
+          font-size: 0.6rem;
+        }
+        &_step3 {
+          bottom: 24%;
+          left: 22%;
+          font-size: 0.6rem;
+        }
+        &_step4 {
+          bottom: 0;
+          left: 21%;
           font-size: 0.6rem;
         }
       }
