FIX: FAQs dimensions, flex alignment // Footer position

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,12 @@
 //SCALES
 $height-header: 5rem;
+$height-footer: 80px;
 $height-view: calc(100vh - $height-header);
 $height-full-view: 100vh;
 
 //COLORS
 $color-white: white;
+$color-black: white;
 $color-light-gray: #f7f8fa;
 $color-orange: rgb(247, 131, 23);
 
