--- a/src/components/Footer/Footer.styles.scss
+++ b/src/components/Footer/Footer.styles.scss
@@ -1,5 +1,4 @@
-$footer_background: #ffffff;
-$footer_color: #333333;
+@import "/src/index.scss";
 
 .footer {
   position: static;
@@ -10,7 +9,7 @@ $footer_color: #333333;
   // bottom: 0;
   // left: 0;
   // right: 0;
-  height: 80px;
+  height: $height-footer;
   padding: 0 2rem;
   box-shadow: 5px 0px 5px 2px #c7c7c733;
 
@@ -34,7 +33,7 @@ $footer_color: #333333;
     .footer__idioms--selected {
       cursor: pointer;
       font-weight: 600;
-      border-bottom: 2px solid black;
+      border-bottom: 2px solid $color-black;
     }
 
     h6 {
